TestSuite/errors/err0298.pas
begin
  var a: array[,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,] of byte;//минимум 32 запятых
end.